--- a/playground.ipynb
+++ b/playground.ipynb
@@ -386,28 +386,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f75750fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def augment_diary(diary_df, movie_json):\n",
-    "#     cache = load_cache()\n",
-    "#     key = f\"Submarine_2010\"\n",
-    "\n",
-    "#     movie_metadata = cache[key]\n",
-    "\n",
-    "#     diary_df.with_columns(\n",
-    "#         pl.col(\"Title\"),\n",
-    "#     )\n",
-    "        \n",
-    "#     print(movie_metadata)\n",
-    "\n",
-    "# augment_diary(df, CACHE_FILE)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "id": "d415ef74",
    "metadata": {},
@@ -452,6 +430,7 @@
     "df = df.with_columns(\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Genre\"))).str.split(\", \").alias(\"Genre\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Director\"))).alias(\"Director\"),\n",
+    "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Writer\"))).str.split(\", \").alias(\"Writer\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Actors\"))).str.split(\", \").alias(\"Actors\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Country\"))).alias(\"Country\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Language\"))).str.split(\", \").alias(\"Language\"),\n",
