--- a/playground.ipynb
+++ b/playground.ipynb
@@ -224,7 +224,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (48, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Year</th><th>count</th></tr><tr><td>i64</td><td>u32</td></tr></thead><tbody><tr><td>2023</td><td>16</td></tr><tr><td>2024</td><td>13</td></tr><tr><td>2022</td><td>4</td></tr><tr><td>1975</td><td>3</td></tr><tr><td>1993</td><td>3</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1989</td><td>1</td></tr><tr><td>2009</td><td>1</td></tr><tr><td>1950</td><td>1</td></tr><tr><td>2019</td><td>1</td></tr><tr><td>2020</td><td>1</td></tr></tbody></table></div>"
+       "<small>shape: (48, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Year</th><th>count</th></tr><tr><td>i64</td><td>u32</td></tr></thead><tbody><tr><td>2023</td><td>16</td></tr><tr><td>2024</td><td>13</td></tr><tr><td>2022</td><td>4</td></tr><tr><td>1975</td><td>3</td></tr><tr><td>1993</td><td>3</td></tr><tr><td>&hellip;</td><td>&hellip;</td></tr><tr><td>1960</td><td>1</td></tr><tr><td>2015</td><td>1</td></tr><tr><td>1963</td><td>1</td></tr><tr><td>2019</td><td>1</td></tr><tr><td>2020</td><td>1</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (48, 2)\n",
@@ -239,9 +239,9 @@
        "│ 1975 ┆ 3     │\n",
        "│ 1993 ┆ 3     │\n",
        "│ …    ┆ …     │\n",
-       "│ 1989 ┆ 1     │\n",
-       "│ 2009 ┆ 1     │\n",
-       "│ 1950 ┆ 1     │\n",
+       "│ 1960 ┆ 1     │\n",
+       "│ 2015 ┆ 1     │\n",
+       "│ 1963 ┆ 1     │\n",
        "│ 2019 ┆ 1     │\n",
        "│ 2020 ┆ 1     │\n",
        "└──────┴───────┘"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d415ef74",
    "metadata": {},
    "outputs": [],
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "id": "74888ecc",
    "metadata": {},
    "outputs": [],
@@ -429,19 +429,21 @@
     "\n",
     "df = df.with_columns(\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Genre\"))).str.split(\", \").alias(\"Genre\"),\n",
+    "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Runtime\"))).str.split(\", \").alias(\"Runtime\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Director\"))).alias(\"Director\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Writer\"))).str.split(\", \").alias(\"Writer\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Actors\"))).str.split(\", \").alias(\"Actors\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Country\"))).alias(\"Country\"),\n",
     "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Language\"))).str.split(\", \").alias(\"Language\"),\n",
-    "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Metascore\"))).alias(\"Metascore\")\n",
+    "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"Metascore\"))).str.to_integer(strict=False).alias(\"Metascore\"),\n",
+    "    (pl.struct([\"title_year\"]).map_batches(lambda movie: extract_metadata(cache, movie.struct.field(\"title_year\"), \"imdbRating\"))).str.to_decimal().alias(\"imdbRating\")\n",
     ")\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "23ffcee7",
    "metadata": {},
    "outputs": [
@@ -481,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "e619103f",
    "metadata": {},
    "outputs": [
@@ -495,7 +497,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Director</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;Billy Wilder&quot;</td><td>3</td></tr><tr><td>&quot;Yorgos Lanthimos&quot;</td><td>2</td></tr><tr><td>&quot;Sidney Lumet&quot;</td><td>2</td></tr><tr><td>&quot;Will Gluck&quot;</td><td>2</td></tr><tr><td>&quot;Steven Spielberg&quot;</td><td>2</td></tr></tbody></table></div>"
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Director</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;Billy Wilder&quot;</td><td>3</td></tr><tr><td>&quot;Akira Kurosawa&quot;</td><td>2</td></tr><tr><td>&quot;David Leitch&quot;</td><td>2</td></tr><tr><td>&quot;Steven Spielberg&quot;</td><td>2</td></tr><tr><td>&quot;Ti West&quot;</td><td>2</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 2)\n",
@@ -505,14 +507,14 @@
        "│ str              ┆ u32   │\n",
        "╞══════════════════╪═══════╡\n",
        "│ Billy Wilder     ┆ 3     │\n",
-       "│ Yorgos Lanthimos ┆ 2     │\n",
-       "│ Sidney Lumet     ┆ 2     │\n",
-       "│ Will Gluck       ┆ 2     │\n",
+       "│ Akira Kurosawa   ┆ 2     │\n",
+       "│ David Leitch     ┆ 2     │\n",
        "│ Steven Spielberg ┆ 2     │\n",
+       "│ Ti West          ┆ 2     │\n",
        "└──────────────────┴───────┘"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "d80e41f8",
    "metadata": {},
    "outputs": [
@@ -550,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "330a5f03",
    "metadata": {},
    "outputs": [
@@ -564,7 +566,7 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Country</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;United States&quot;</td><td>34</td></tr><tr><td>&quot;Japan&quot;</td><td>6</td></tr><tr><td>&quot;United Kingdom, United States&quot;</td><td>3</td></tr><tr><td>&quot;United States, Canada&quot;</td><td>3</td></tr><tr><td>&quot;Italy, France&quot;</td><td>2</td></tr></tbody></table></div>"
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Country</th><th>count</th></tr><tr><td>str</td><td>u32</td></tr></thead><tbody><tr><td>&quot;United States&quot;</td><td>34</td></tr><tr><td>&quot;Japan&quot;</td><td>6</td></tr><tr><td>&quot;United States, Canada&quot;</td><td>3</td></tr><tr><td>&quot;United Kingdom, United States&quot;</td><td>3</td></tr><tr><td>&quot;Soviet Union&quot;</td><td>2</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 2)\n",
@@ -575,13 +577,13 @@
        "╞═══════════════════════════════╪═══════╡\n",
        "│ United States                 ┆ 34    │\n",
        "│ Japan                         ┆ 6     │\n",
-       "│ United Kingdom, United States ┆ 3     │\n",
        "│ United States, Canada         ┆ 3     │\n",
-       "│ Italy, France                 ┆ 2     │\n",
+       "│ United Kingdom, United States ┆ 3     │\n",
+       "│ Soviet Union                  ┆ 2     │\n",
        "└───────────────────────────────┴───────┘"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "1e27230a",
    "metadata": {},
    "outputs": [
@@ -619,11 +621,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "3c0ef6dc",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Billy Wilder: 3\n",
+      "Ti West: 2\n",
+      "Ingmar Bergman: 2\n",
+      "I.A.L. Diamond: 2\n",
+      "Hideo Oguni: 2\n",
+      "Richard Linklater: 2\n",
+      "Aki Kaurismäki: 1\n",
+      "Michael Mann: 1\n",
+      "Hayao Miyazaki: 1\n",
+      "Justine Triet: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_top_from_list(df, \"Writer\", 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d926c5c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Name</th><th>Rating</th></tr><tr><td>str</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Heat&quot;</td><td>5.0</td></tr><tr><td>&quot;Perfect Days&quot;</td><td>5.0</td></tr><tr><td>&quot;Past Lives&quot;</td><td>5.0</td></tr><tr><td>&quot;Dune: Part Two&quot;</td><td>5.0</td></tr><tr><td>&quot;Possession&quot;</td><td>5.0</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 2)\n",
+       "┌────────────────┬────────┐\n",
+       "│ Name           ┆ Rating │\n",
+       "│ ---            ┆ ---    │\n",
+       "│ str            ┆ f64    │\n",
+       "╞════════════════╪════════╡\n",
+       "│ Heat           ┆ 5.0    │\n",
+       "│ Perfect Days   ┆ 5.0    │\n",
+       "│ Past Lives     ┆ 5.0    │\n",
+       "│ Dune: Part Two ┆ 5.0    │\n",
+       "│ Possession     ┆ 5.0    │\n",
+       "└────────────────┴────────┘"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select(\"Name\", \"Rating\").drop_nulls().sort(\"Rating\", descending=True).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ef5fac22",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Name</th><th>Metascore</th></tr><tr><td>str</td><td>i64</td></tr></thead><tbody><tr><td>&quot;Lawrence of Arabia&quot;</td><td>100</td></tr><tr><td>&quot;Some Like It Hot&quot;</td><td>98</td></tr><tr><td>&quot;Ran&quot;</td><td>97</td></tr><tr><td>&quot;Portrait of a Lady on Fire&quot;</td><td>95</td></tr><tr><td>&quot;Past Lives&quot;</td><td>94</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 2)\n",
+       "┌────────────────────────────┬───────────┐\n",
+       "│ Name                       ┆ Metascore │\n",
+       "│ ---                        ┆ ---       │\n",
+       "│ str                        ┆ i64       │\n",
+       "╞════════════════════════════╪═══════════╡\n",
+       "│ Lawrence of Arabia         ┆ 100       │\n",
+       "│ Some Like It Hot           ┆ 98        │\n",
+       "│ Ran                        ┆ 97        │\n",
+       "│ Portrait of a Lady on Fire ┆ 95        │\n",
+       "│ Past Lives                 ┆ 94        │\n",
+       "└────────────────────────────┴───────────┘"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select(\"Name\", \"Metascore\").drop_nulls().sort(\"Metascore\", descending=True).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "24af4ae7",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = df.with_columns(\n",
+    "    ((pl.col(\"Metascore\")) * 5/ 100).alias(\"Normalized_Metascore\"),\n",
+    "    ((pl.col(\"imdbRating\")) * 5/ 10).alias(\"Normalized_IMDB\"),\n",
+    "    (pl.col(\"Rating\") - (pl.col(\"Metascore\")) * 5/ 100).abs().alias(\"Rating_Difference_Metascore\"),\n",
+    "    (pl.col(\"Rating\") - (pl.col(\"imdbRating\")) * 5/ 10).abs().alias(\"Rating_Difference_IMDB\"),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "1c1ac8d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Name</th><th>Rating_Difference_Metascore</th><th>Rating</th><th>Normalized_Metascore</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;Friday the 13th&quot;</td><td>2.9</td><td>4.0</td><td>1.1</td></tr><tr><td>&quot;The Thing&quot;</td><td>2.15</td><td>5.0</td><td>2.85</td></tr><tr><td>&quot;Bullet Train&quot;</td><td>2.05</td><td>4.5</td><td>2.45</td></tr><tr><td>&quot;Ferris Bueller&#x27;s Day Off&quot;</td><td>1.95</td><td>5.0</td><td>3.05</td></tr><tr><td>&quot;The Sound of Music&quot;</td><td>1.85</td><td>5.0</td><td>3.15</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 4)\n",
+       "┌──────────────────────────┬─────────────────────────────┬────────┬──────────────────────┐\n",
+       "│ Name                     ┆ Rating_Difference_Metascore ┆ Rating ┆ Normalized_Metascore │\n",
+       "│ ---                      ┆ ---                         ┆ ---    ┆ ---                  │\n",
+       "│ str                      ┆ f64                         ┆ f64    ┆ f64                  │\n",
+       "╞══════════════════════════╪═════════════════════════════╪════════╪══════════════════════╡\n",
+       "│ Friday the 13th          ┆ 2.9                         ┆ 4.0    ┆ 1.1                  │\n",
+       "│ The Thing                ┆ 2.15                        ┆ 5.0    ┆ 2.85                 │\n",
+       "│ Bullet Train             ┆ 2.05                        ┆ 4.5    ┆ 2.45                 │\n",
+       "│ Ferris Bueller's Day Off ┆ 1.95                        ┆ 5.0    ┆ 3.05                 │\n",
+       "│ The Sound of Music       ┆ 1.85                        ┆ 5.0    ┆ 3.15                 │\n",
+       "└──────────────────────────┴─────────────────────────────┴────────┴──────────────────────┘"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select(\"Name\", \"Rating_Difference_Metascore\", \"Rating\", \"Normalized_Metascore\").drop_nulls().sort(\"Rating_Difference_Metascore\", descending=True).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "dcb5094e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (5, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Name</th><th>Rating_Difference_IMDB</th><th>Rating</th><th>Normalized_IMDB</th></tr><tr><td>str</td><td>f64</td><td>f64</td><td>decimal[*,6]</td></tr></thead><tbody><tr><td>&quot;Salò, or the 120 Days of Sodom&quot;</td><td>2.4</td><td>0.5</td><td>2.900000</td></tr><tr><td>&quot;Possession&quot;</td><td>1.35</td><td>5.0</td><td>3.650000</td></tr><tr><td>&quot;Submarine&quot;</td><td>1.35</td><td>5.0</td><td>3.650000</td></tr><tr><td>&quot;Superbad&quot;</td><td>1.2</td><td>5.0</td><td>3.800000</td></tr><tr><td>&quot;Rushmore&quot;</td><td>1.2</td><td>5.0</td><td>3.800000</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (5, 4)\n",
+       "┌────────────────────────────────┬────────────────────────┬────────┬─────────────────┐\n",
+       "│ Name                           ┆ Rating_Difference_IMDB ┆ Rating ┆ Normalized_IMDB │\n",
+       "│ ---                            ┆ ---                    ┆ ---    ┆ ---             │\n",
+       "│ str                            ┆ f64                    ┆ f64    ┆ decimal[*,6]    │\n",
+       "╞════════════════════════════════╪════════════════════════╪════════╪═════════════════╡\n",
+       "│ Salò, or the 120 Days of Sodom ┆ 2.4                    ┆ 0.5    ┆ 2.900000        │\n",
+       "│ Possession                     ┆ 1.35                   ┆ 5.0    ┆ 3.650000        │\n",
+       "│ Submarine                      ┆ 1.35                   ┆ 5.0    ┆ 3.650000        │\n",
+       "│ Superbad                       ┆ 1.2                    ┆ 5.0    ┆ 3.800000        │\n",
+       "│ Rushmore                       ┆ 1.2                    ┆ 5.0    ┆ 3.800000        │\n",
+       "└────────────────────────────────┴────────────────────────┴────────┴─────────────────┘"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.select(\"Name\", \"Rating_Difference_IMDB\", \"Rating\", \"Normalized_IMDB\").drop_nulls().sort(\"Rating_Difference_IMDB\", descending=True).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "540a30eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# total dura"
+   ]
   }
  ],
  "metadata": {
